--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,8 @@ code {
     sm:font-normal sm:tracking-[-0.55px] sm:text-body sm:leading-[3.2rem];
   }
   .generic-heading {
-    @apply text-[3.6rem] font-bold tracking-[-0.54px] text-black leading-[4rem] sm:text-[3.2rem] 
-    sm:font-bold sm:tracking-[-0.48px] sm:text-black sm:leading-[3.6rem];
+    @apply sm:text-[3.6rem] sm:font-bold sm:tracking-[-0.54px] sm:text-black sm:leading-[4rem] text-[3.2rem] 
+    font-bold tracking-[-0.48px] text-black leading-[3.6rem];
   }
   .generic-sub-heading {
     @apply text-[2.6rem] font-bold tracking-[-0.65px] text-black leading-[3rem] sm:text-[3rem] 
