--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@ code {
     @apply text-[1.6rem] font-normal tracking-[-0.4px] text-body leading-[2rem] sm:text-[2rem] 
     sm:font-normal sm:tracking-[-0.5px] sm:text-body sm:leading-[2.4rem];
   }
+  .accordion-text {
+    @apply text-[1.4rem] font-normal tracking-[-0.35px] leading-[1.8rem] text-spanish-gray sm:text-[1.6rem] 
+    sm:font-normal sm:tracking-[-0.4px] sm:text-spanish-gray sm:leading-[2.4rem];
+  }
 
   /* borders */
   .border-bottom-light {
