--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,14 @@
   opacity: 1;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
+}
+.blog-banner {
+  background: linear-gradient(180deg,hsla(0,0%,48.6%,0),#000),url(assets/images/smiling-children-1.png),0 0 no-repeat padding-box;
+  opacity: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 body {
   font-size: 22px;
