--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,9 @@
 }
 .pagination {
   display: flex;
+  justify-content: space-between;
   gap: 2rem;
+  width: 100%;
 }
 .hero {
   background: linear-gradient(270deg,rgba(19,38,85,0),#132655),url(assets/images/hero.png),0 0 no-repeat padding-box;
