--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,10 @@
   --border-dark: 1px solid var(--color-body);
   font-size: 62.5%;
 }
-.pagination {
-  display: flex;
-  justify-content: space-between;
-  gap: 2rem;
-  width: 100%;
+
+.homepage-slider {
+  background: linear-gradient(270deg,rgba(19,38,85,0),#132655),url(assets/images/hero.png),0 0 no-repeat padding-box;
+
 }
 .hero {
   background: linear-gradient(270deg,rgba(19,38,85,0),#132655),url(assets/images/hero.png),0 0 no-repeat padding-box;
