--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,13 @@
 .homepage .slick-slide {
   padding: 0;
 }
+  .homepage .slick-dots {
+    bottom: 20px; 
+  }
+  .homepage .slick-dots li button:before {
+    background-color: white !important;
+  }
+
 
 /* appeals slick */
 
@@ -89,9 +96,6 @@
   height: 5px !important;
   background: #e6e6e6 !important;
 }
-
-
-
 
 .hero {
   background: linear-gradient(270deg,rgba(19,38,85,0),#132655),url(assets/images/hero.png),0 0 no-repeat padding-box;
